fix: mac: ensure context menu items are aligned consistently http://bugs.activestate.com/show_bug.cgi?id=88125 rn=
(integrated from komodo (trunk) change 57104 by toddw)


git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@6449 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/platform.css
+++ b/src/chrome/komodo/skin/plat/mac/platform.css
@@ -232,3 +232,7 @@ menupopup.has-iconic-menuitems menuitem[type="checkbox"] .menu-iconic-text {
   padding-left: 20px;
 }
 
+menupopup.has-iconic-menuitems menuitem[type="radio"] .menu-iconic-left {
+  padding-left: 20px;
+}
+
